fix: in-range behind selected now looks awsome

--- a/packages/datepicker/src/styles/w-datepicker-day.css
+++ b/packages/datepicker/src/styles/w-datepicker-day.css
@@ -6,7 +6,10 @@
   --_day-height: var(--day-height, 40px);
   --_day-padding: var(--day-padding, 0px);
   --_day-font-weight: var(--day-font-weight, normal);
-  --_day-border-radius: var(--day-border-radius, 0%);
+  --_day-border-radius: var(--day-border-radius, 50%);
+
+  --_day-in-range-background: var(--day-in-range-background, var(--w-s-color-background-primary-subtle-active));
+
   text-align: center;
   cursor: pointer;
   transition: background 0.2s ease-in-out;
@@ -23,7 +26,7 @@
 }
 
 .w-datepicker__day:hover{
-  z-index: 10; /* ? */
+  zz-index: 10; /* ? */
   --day-background: var(--w-s-color-background-selected);
   --day-border-radius: 50%;
 }
@@ -32,8 +35,27 @@
   text-decoration: none;
 }
 
+.w-datepicker__day--start:before,
+.w-datepicker__day--end:before{
+  content:'';
+  position: absolute;
+  display:block;
+  background-color: var(--_day-in-range-background);
+  width: calc(var(--day-width) / 2);
+  height: 100%;
+  top:0;
+  z-index: -10;
+}
+
+.w-datepicker__day--start:before{
+  left: calc(var(--day-width) / 2);
+}
+
+.w-datepicker__day--end:before{
+  left: 0;
+}
+
 /* === Day variants === */
-/* Where is the logic effecting the today styling? */
 .w-datepicker__day--today {
   --day-color: var(--w-s-text-link);
   --day-font-weight: bold;
@@ -42,15 +64,20 @@
 .w-datepicker__day--selected {
   --day-background: var(--w-s-color-background-primary);
   --day-color: var(--w-s-color-text-inverted);
-  --day-border-radius: 50%;
 }
 .w-datepicker__day--selected:hover {
   --day-background: var(--w-s-color-background-primary-hover);
 }
 
 .w-datepicker__day--in-range {
-  --day-background: var(--w-s-color-background-primary-subtle-active);
+  --day-background: var(--_day-in-range-background);
   --day-color: var(--w-s-text);
+  --day-border-radius: 0;
+}
+.w-datepicker__day--in-range:hover{
+  --day-background: var(--w-s-color-background-primary-hover);
+  --day-border-radius: 0;
+  --day-color: var(--w-s-color-text-inverted);
 }
 
 .w-datepicker__day--booked {
@@ -64,52 +91,5 @@
   --day-color: var(--w-s-color-text-disabled);
   cursor: not-allowed;
   pointer-events: none;
-  border:1 px solid red;
 }
 
-
-
-
-
-
-/* This is for filling in the gap behind the rounded selected dates and the in-range stuff */
-/*
-.w-datepicker__day--selected+.w-datepicker__day--in-range:before{
-  content:'';
-  position: absolute;
-  display:block;
-  background-color:pink;
-  width: 20px;
-  height: 100%;
-  left: -20px;
-  top:0;
-  z-index: -10;
-}
-.w-datepicker__day--in-range+.w-datepicker__day--selected:before{
-  content:'';
-  position: absolute;
-  display:block;
-  background-color:pink;
-  width: 20px;
-  height: 100%;
-  top:0;
-  z-index: -10;
-}
-*/
-
-/* Due to the sibling selector not working across multiple tr's in a table, this is the only sensible solve iv come up with so far, been through :has :where :is and stuff like that aswell but the selectors turn nuts due to the same problem with table syntax.*/
-/* The logic that adds these classes does not work for some reason */
-.w-datepicker__day--start:before,
-.w-datepicker__day--end:before{
-  content:'';
-  position: absolute;
-  display:block;
-  background-color:pink;
-  width: calc(var(--day-width) / 2);
-  height: 100%;
-  top:0;
-  z-index: -10;
-}
-.w-datepicker__day--start:before{
-  left: calc(-1 * var(--day-width) / 2);
-}
